--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.21",
+    "@types/node": "^20.11.24",
+    "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
     "express": "^4.18.2"
